--- a/javascript.html
+++ b/javascript.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/index.css">
-    <title>Java</title>
+    <title>JavaScript</title>
     <script src="https://kit.fontawesome.com/2b9718ccbe.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <script src="./js/footer.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-<h1>Java</h1>
+<h1>JavaScript</h1>
 </body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer id="footer"></footer>
